--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
     </style>
 </head>
 <body>
-<script type='text/javascript' src='//pl26941852.profitableratecpm.com/c9/72/31/c9723164ce4edb21b42819da3b075211.js'></script>
 <br/>
 <br/>
 <br/>
@@ -69,8 +68,18 @@
         <h1>Click Link to Watch</h1>
         <p></p>
         <a href="https://caitlinogletree.github.io/octykbx71.mp4" class="download-btn">https://cdn.videy.co/octykbx71.mp4</a>
-        <a href="https://adrielis0801.github.io/Mabonx.mp4" class="download-btn">Play More VIDEOS</a>
+        		<div class="banner-ad">
+<script type="text/javascript">
+	atOptions = {
+		'key' : '4a2fc598ebbbdbc95eb3bef73798c939',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
     </div>
 
 </body>
+
 </html>
